--- a/jeffe.bib
+++ b/jeffe.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2013-11-08 13:41:35 -0600 
+%% Created for Jeff Erickson at 2015-11-27 17:43:23 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -11,17 +11,28 @@
 @string{jeffe = {Jeff Erickson}}
 
 
+@misc{defect,
+	Arxiv = {1510.00571},
+	Author = {Chang, Hsien-Chih and Erickson, Jeff},
+	Date-Added = {2015-11-27 23:40:42 +0000},
+	Date-Modified = {2015-11-27 23:43:23 +0000},
+	Howpublished = {Preprint},
+	Month = {October},
+	Title = {Electrical reduction, homtoopy moves,  and defect},
+	Year = {2015}}
+
 @misc{comptop-notes,
-	Author = {Jeff Erickson},
+	Author = {Erickson, Jeff},
 	Date-Added = {2013-11-08 19:32:30 +0000},
 	Date-Modified = {2013-11-08 19:35:07 +0000},
 	Note = {Annotated bibliography and lecture notes},
 	Title = {{CS} 598: {Computational} {Topology}},
 	Url = {http://www.cs.uiuc.edu/~jeffe/teaching/comptop/2009/schedule.html},
-	Year = {2009}}
+	Year = {2009},
+	Bdsk-Url-1 = {http://www.cs.uiuc.edu/~jeffe/teaching/comptop/2009/schedule.html}}
 
 @phdthesis{kyle-thesis,
-	Author = {Kyle Jordan Fox},
+	Author = {Fox, Kyle Jordan},
 	Date-Added = {2013-10-28 22:40:04 +0000},
 	Date-Modified = {2013-10-28 22:41:41 +0000},
 	Month = {December},
@@ -30,7 +41,7 @@
 	Year = {2013}}
 
 @book{l-pa-06,
-	Author = {Steven M. LaValle},
+	Author = {LaValle, Steven M.},
 	Date-Added = {2013-05-06 15:39:01 +0000},
 	Date-Modified = {2013-05-06 15:39:47 +0000},
 	Publisher = {Cambridge Univ. Press},
@@ -38,7 +49,7 @@
 	Year = {2006}}
 
 @article{abg-cpgud-09,
-	Author = {Stephanie B. Alexander and Richard Bishop and Robert Ghrist},
+	Author = {Alexander, Stephanie B. and Bishop, Richard and Ghrist, Robert},
 	Date-Added = {2013-05-06 15:31:11 +0000},
 	Date-Modified = {2013-05-06 15:33:19 +0000},
 	Journal = {Ensiegn. Math.},
@@ -48,7 +59,7 @@
 	Year = {2009}}
 
 @article{abg-tcspd-10,
-	Author = {Stephanie B. Alexander and Richard Bishop and Robert Ghrist},
+	Author = {Alexander, Stephanie B. and Bishop, Richard and Ghrist, Robert},
 	Date-Added = {2013-05-06 15:27:44 +0000},
 	Date-Modified = {2013-05-06 15:28:59 +0000},
 	Journal = {Geom. Dedicata},
@@ -58,7 +69,7 @@
 	Year = {2010}}
 
 @inproceedings{cc-msspg-07,
-	Author = {Sergio Cabello and Erin W. Chambers},
+	Author = {Cabello, Sergio and Chambers, Erin W.},
 	Booktitle = {Proc. 18th Ann. ACM-SIAM Symp. Discrete Algorithms},
 	Date-Added = {2013-05-06 15:14:59 +0000},
 	Date-Modified = {2013-05-06 15:15:03 +0000},
@@ -69,7 +80,7 @@
 	Year = {2007}}
 
 @inproceedings{clbm-mwpdmr-06,
-	Author = {Hamid Chitsaz and Steven M. LaValle and Devin J. Balkcom and Matthew T. Mason},
+	Author = {Chitsaz, Hamid and LaValle, Steven M. and Balkcom, Devin J. and Mason, Matthew T.},
 	Booktitle = {Proc. IEEE Int. Conf. Robotics and Automation},
 	Date-Added = {2013-05-06 15:04:47 +0000},
 	Date-Modified = {2013-05-06 15:39:23 +0000},
@@ -77,7 +88,7 @@
 	Year = {2006}}
 
 @inproceedings{clbm-ecmwr-06,
-	Author = {Hamid Chitsaz and Steven M. LaValle and Devin J. Balkcom and Matthew T. Mason},
+	Author = {Chitsaz, Hamid and LaValle, Steven M. and Balkcom, Devin J. and Mason, Matthew T.},
 	Booktitle = {Proc. 12th IEEE Int. Conf. Methods and Models in Automation and Robotics},
 	Date-Added = {2013-05-06 15:03:37 +0000},
 	Date-Modified = {2013-05-06 15:39:18 +0000},
@@ -85,7 +96,7 @@
 	Year = {2006}}
 
 @phdthesis{c-gpmr-08,
-	Author = {Hamid Reza Chitsaz},
+	Author = {Chitsaz, Hamid Reza},
 	Date-Added = {2013-05-06 15:02:40 +0000},
 	Date-Modified = {2013-05-06 15:03:18 +0000},
 	School = {University of Illinois, Urbana-Champaign},
@@ -93,7 +104,7 @@
 	Year = {2008}}
 
 @inproceedings{cl-mwpdd-07,
-	Author = {Hamid Chitsaz and Steven M. LaValle},
+	Author = {Chitsaz, Hamid and LaValle, Steven M.},
 	Booktitle = {Proc. IEEE Int. Conf. Robotics and Automation},
 	Date-Added = {2013-05-06 15:01:04 +0000},
 	Date-Modified = {2013-05-06 15:39:27 +0000},
@@ -101,7 +112,7 @@
 	Year = {2007}}
 
 @inproceedings{cl-tpda-07,
-	Author = {Hamid Chitsaz and Steven M. LaValle},
+	Author = {Chitsaz, Hamid and LaValle, Steven M.},
 	Booktitle = {Proc. IEEE Conf. Decision and Control},
 	Date-Added = {2013-05-06 15:00:23 +0000},
 	Date-Modified = {2013-05-06 15:39:32 +0000},
@@ -110,7 +121,7 @@
 	Year = {2007}}
 
 @phdthesis{n-coec-12,
-	Author = {Amir Nayyeri},
+	Author = {Nayyeri, Amir},
 	Date-Added = {2013-05-06 14:58:59 +0000},
 	Date-Modified = {2013-05-06 14:59:22 +0000},
 	School = {University of Illinois, Urbana-Champaign},
@@ -118,7 +129,7 @@
 	Year = {2012}}
 
 @phdthesis{c-citf-08,
-	Author = {Erin Wolf Chambers},
+	Author = {Chambers, Erin Wolf},
 	Date-Added = {2013-05-06 14:56:28 +0000},
 	Date-Modified = {2013-05-06 14:58:30 +0000},
 	School = {University of Illinois, Urbana-Champaign},
@@ -126,7 +137,7 @@
 	Year = {2008}}
 
 @inproceedings{dehn,
-	Author = {Jeff Erickson and Kim Whittlesey},
+	Author = {Erickson, Jeff and Whittlesey, Kim},
 	Booktitle = {Proc. 24th Ann. ACM-SIAM Symp. Discrete Algorithms},
 	Date-Added = {2013-05-05 21:00:12 +0000},
 	Date-Modified = {2013-05-05 21:00:46 +0000},
@@ -135,11 +146,11 @@
 	Year = {2013}}
 
 @incollection{optcycles,
-	Author = {Jeff Erickson},
+	Author = {Erickson, Jeff},
 	Booktitle = {Advances in Applied and Computational Topology},
 	Date-Added = {2013-05-05 20:54:08 +0000},
 	Date-Modified = {2013-05-05 20:56:23 +0000},
-	Editor = {Afra Zomorodian},
+	Editor = {Zomorodian, Afra},
 	Note = {Invited survey for an AMS Short Course on Computational Topology at the 2011 Joint Mathematics Meetings},
 	Number = {70},
 	Pages = {195--228},
@@ -149,7 +160,7 @@
 	Year = {2012}}
 
 @inproceedings{hnss-wymwm-12,
-	Author = {Sariel Har-Peled and Amir Nayyeri and Mohammad R. Salvatipour and Anastasios Sidiropoulos},
+	Author = {Har-Peled, Sariel and Nayyeri, Amir and Salvatipour, Mohammad R. and Sidiropoulos, Anastasios},
 	Booktitle = {Proc. 28th Ann. Symp. Comput. Geom.},
 	Date-Added = {2013-05-05 20:24:04 +0000},
 	Date-Modified = {2013-05-05 20:25:04 +0000},
@@ -158,7 +169,7 @@
 	Year = {2012}}
 
 @article{tracing,
-	Author = {Jeff Erickson and Amir Nayyeri},
+	Author = {Erickson, Jeff and Nayyeri, Amir},
 	Comments = {Special issue of invited papers from SOCG 2012},
 	Date-Added = {2013-05-05 20:15:59 +0000},
 	Date-Modified = {2013-11-08 06:40:19 +0000},
@@ -172,7 +183,7 @@
 
 @misc{atsp,
 	Arxiv = {1304.1810},
-	Author = {Jeff Erickson and Anastasios Sidiropoulos},
+	Author = {Erickson, Jeff and Sidiropoulos, Anastasios},
 	Date-Added = {2013-05-05 20:13:43 +0000},
 	Date-Modified = {2013-10-30 16:26:19 +0000},
 	Howpublished = {Preprint},
@@ -181,7 +192,7 @@
 	Bdsk-Url-1 = {http://www.cs.uiuc.edu/~jeffe/atsp.html}}
 
 @inproceedings{f-sncdu-13,
-	Author = {Kyle Fox},
+	Author = {Fox, Kyle},
 	Booktitle = {Proc. 24th Ann. ACM-SIAM Symp. Discrete Algorithms},
 	Date-Added = {2013-05-05 20:10:17 +0000},
 	Date-Modified = {2013-05-05 20:11:27 +0000},
@@ -190,7 +201,7 @@
 	Year = {2013}}
 
 @inproceedings{cfn-cmcgg-13,
-	Author = {Erin W. Chambers and Kyle Fox and Amir Nayyeri},
+	Author = {Chambers, Erin W. and Fox, Kyle and Nayyeri, Amir},
 	Booktitle = {Proc. 29th Ann. Symp. Comput. Geom.},
 	Date-Added = {2013-05-05 20:09:06 +0000},
 	Date-Modified = {2013-05-05 20:09:58 +0000},
@@ -199,7 +210,7 @@
 	Year = {2013}}
 
 @mastersthesis{m-ausmf-11,
-	Author = {Alexander Mont},
+	Author = {Mont, Alexander},
 	Date-Added = {2013-05-03 21:03:29 +0000},
 	Date-Modified = {2013-05-03 21:04:12 +0000},
 	Month = {August},
@@ -208,7 +219,7 @@
 	Year = {2011}}
 
 @inproceedings{hexmesh,
-	Author = {Jeff Erickson},
+	Author = {Erickson, Jeff},
 	Booktitle = {Proc. 29th Ann. Symp. Comput. Geom.},
 	Date-Added = {2012-04-10 14:51:28 +0000},
 	Date-Modified = {2013-11-04 05:38:52 +0000},
@@ -218,7 +229,7 @@
 	Bdsk-Url-1 = {http://www.cs.uiuc.edu/~jeffe/pubs/research/cubulate.html}}
 
 @article{surflow,
-	Author = {Erin W. Chambers and Jeff Erickson and Amir Nayyeri},
+	Author = {Chambers, Erin W. and Erickson, Jeff and Nayyeri, Amir},
 	Comments = {Full version of \cite{surflowx}},
 	Date-Added = {2011-11-29 21:29:41 +0000},
 	Date-Modified = {2013-11-08 06:42:17 +0000},
@@ -231,7 +242,7 @@
 	Bdsk-Url-1 = {http://www.cs.uiuc.edu/~jeffe/pubs/surflow.html}}
 
 @inproceedings{global,
-	Author = {Jeff Erickson and Kyle Fox and Amir Nayyeri},
+	Author = {Erickson, Jeff and Fox, Kyle and Nayyeri, Amir},
 	Booktitle = {Proc. 23rd Ann. ACM-SIAM Symp. Discrete Algorithms},
 	Date-Added = {2011-08-05 12:32:26 -0500},
 	Date-Modified = {2013-05-07 15:15:16 +0000},
@@ -241,7 +252,7 @@
 	Bdsk-Url-1 = {http://www.cs.uiuc.edu/~jeffe/pubs/global.html}}
 
 @inproceedings{tracingx,
-	Author = {Jeff Erickson and Amir Nayyeri},
+	Author = {Erickson, Jeff and Nayyeri, Amir},
 	Booktitle = {Proc. 28th Ann. Symp. Comput. Geom.},
 	Date-Added = {2011-08-05 12:31:26 -0500},
 	Date-Modified = {2012-06-26 20:56:27 +0000},
@@ -251,7 +262,7 @@
 	Bdsk-Url-1 = {http://www.cs.uiuc.edu/~jeffe/pubs/tracing.html}}
 
 @inproceedings{noncrossing,
-	Author = {Jeff Erickson and Amir Nayyeri},
+	Author = {Erickson, Jeff and Nayyeri, Amir},
 	Booktitle = {Proc. 22nd Ann. ACM-SIAM Symp. Discrete Algorithms},
 	Date-Added = {2010-12-28 17:01:06 -0600},
 	Date-Modified = {2011-03-23 01:30:30 -0500},
@@ -261,7 +272,7 @@
 	Bdsk-Url-1 = {http://www.cs.uiuc.edu/~jeffe/repath.html}}
 
 @inproceedings{wobble,
-	Author = {Jeff Erickson},
+	Author = {Erickson, Jeff},
 	Booktitle = {Proc. 27th Ann. Symp. Comput. Geom.},
 	Date-Added = {2010-12-28 15:22:52 -0600},
 	Date-Modified = {2011-08-05 12:31:20 -0500},
@@ -271,7 +282,7 @@
 	Bdsk-Url-1 = {http://www.cs.uiuc.edu/~jeffe/pubs/wobble.html}}
 
 @inproceedings{homcover,
-	Author = {Jeff Erickson and Amir Nayyeri},
+	Author = {Erickson, Jeff and Nayyeri, Amir},
 	Booktitle = {Proc. 22nd Ann. ACM-SIAM Symp. Discrete Algorithms},
 	Date-Added = {2010-11-09 02:01:20 -0600},
 	Date-Modified = {2011-10-03 09:11:03 +0000},
@@ -281,7 +292,7 @@
 	Bdsk-Url-1 = {http://www.cs.uiuc.edu/~jeffe/homcover.html}}
 
 @inproceedings{repath,
-	Author = {Jeff Erickson and Amir Nayyeri},
+	Author = {Erickson, Jeff and Nayyeri, Amir},
 	Booktitle = {Proc. 22nd Ann. ACM-SIAM Symp. Discrete Algorithms},
 	Date-Added = {2010-11-09 01:30:47 -0600},
 	Date-Modified = {2011-03-23 01:30:46 -0500},
@@ -291,7 +302,7 @@
 	Bdsk-Url-1 = {http://www.cs.uiuc.edu/~jeffe/repath.html}}
 
 @inproceedings{octagonsx,
-	Author = {{\'E}ric {Colin de Verdi{\`e}re} and Jeff Erickson},
+	Author = {{Colin de Verdière}, Éric and Erickson, Jeff},
 	Booktitle = {Proc. 17th Ann. ACM-SIAM Symp. Discrete Algorithms},
 	Date-Added = {2010-11-09 00:49:42 -0600},
 	Date-Modified = {2010-11-09 00:52:46 -0600},
@@ -301,7 +312,7 @@
 	Year = 2006}
 
 @article{shadow,
-	Author = {Erin W. Chambers and Vin de Silva and Jeff Erickson and Robert Ghrist},
+	Author = {Chambers, Erin W. and de Silva, Vin and Erickson, Jeff and Ghrist, Robert},
 	Date-Added = {2010-05-20 16:01:14 -0500},
 	Date-Modified = {2013-05-06 15:19:34 +0000},
 	Journal = {Discrete Comput. Geom.},
@@ -312,7 +323,7 @@
 	Year = {2010}}
 
 @inproceedings{surfcut,
-	Author = {Erin W. Chambers and Jeff Erickson and Amir Nayyeri},
+	Author = {Chambers, Erin W. and Erickson, Jeff and Nayyeri, Amir},
 	Booktitle = {Proc. 25th Ann. Symp. Comput. Geom.},
 	Date-Added = {2010-05-20 15:54:38 -0500},
 	Date-Modified = {2010-05-20 15:54:49 -0500},
@@ -322,7 +333,7 @@
 	Bdsk-Url-1 = {http://www.cs.uiuc.edu/~jeffe/pubs/surfcut.html}}
 
 @inproceedings{surflowx,
-	Author = {Erin W. Chambers and Jeff Erickson and Amir Nayyeri},
+	Author = {Chambers, Erin W. and Erickson, Jeff and Nayyeri, Amir},
 	Booktitle = {Proc. 42nd Ann. ACM Symp. Theory Comput.},
 	Date-Added = {2010-05-20 15:53:07 -0500},
 	Date-Modified = {2011-11-29 21:30:31 +0000},
@@ -332,7 +343,7 @@
 	Bdsk-Url-1 = {http://www.cs.uiuc.edu/~jeffe/pubs/surflow.html}}
 
 @inproceedings{parshort,
-	Author = {Jeff Erickson},
+	Author = {Erickson, Jeff},
 	Booktitle = {Proc. 21st Ann. ACM-SIAM Symp. Discrete Algorithms},
 	Date-Added = {2010-04-25 22:32:33 -0500},
 	Date-Modified = {2010-04-25 22:34:09 -0500},
@@ -341,7 +352,7 @@
 	Year = {2010}}
 
 @misc{notes,
-	Author = {Jeff Erickson},
+	Author = {Erickson, Jeff},
 	Date-Added = {2008-12-12 04:49:03 -0600},
 	Date-Modified = {2013-11-08 19:39:24 +0000},
 	Month = {December},
@@ -352,7 +363,7 @@
 	Bdsk-Url-1 = {http://www.cs.uiuc.edu/~jeffe/teaching/algorithms}}
 
 @article{shri-adaptive,
-	Author = {Shripad Thite},
+	Author = {Thite, Shripad},
 	Date-Added = {2008-12-10 03:35:31 -0600},
 	Date-Modified = {2008-12-10 03:36:18 -0600},
 	Journal = {Comput. Geom. Theory Appl.},
@@ -363,7 +374,7 @@
 
 @article{multishort,
 	Arxiv = {1202.0314},
-	Author = {Sergio Cabello and Erin W. Chambers and Jeff Erickson},
+	Author = {Cabello, Sergio and Chambers, Erin W. and Erickson, Jeff},
 	Date-Added = {2008-12-06 23:47:21 -0600},
 	Date-Modified = {2013-11-08 06:42:50 +0000},
 	Journal = {SIAM J. Comput.},
@@ -374,7 +385,7 @@
 	Year = {2013}}
 
 @inproceedings{eellipse,
-	Author = {Olivier Devillers and Jeff Erickson and Xavier Goaoc},
+	Author = {Devillers, Olivier and Erickson, Jeff and Goaoc, Xavier},
 	Booktitle = {Proc. 19th Ann. ACM-SIAM Symp. Discrete Algorithms},
 	Date-Added = {2008-12-06 23:18:00 -0600},
 	Date-Modified = {2008-12-06 23:18:00 -0600},
@@ -383,7 +394,7 @@
 	Year = {2008}}
 
 @inproceedings{ripscon,
-	Author = {Erin W. Chambers and Jeff Erickson and Pratik Worah},
+	Author = {Chambers, Erin W. and Erickson, Jeff and Worah, Pratik},
 	Booktitle = {Proc. 24th Ann. Symp. Comput. Geom.},
 	Date-Added = {2008-12-06 23:11:47 -0600},
 	Date-Modified = {2008-12-06 23:12:30 -0600},
@@ -392,18 +403,18 @@
 	Year = {2008}}
 
 @article{frechet,
-	Author = {Erin W. Chambers and {\'E}ric {Colin de Verdi{\`e}re} and Jeff Erickson and Sylvain Lazard and Francis Lazarus and Shripad Thite},
+	Author = {Chambers, Erin W. and {Colin de Verdière}, Éric and Erickson, Jeff and Lazard, Sylvain and Lazarus, Francis and Thite, Shripad},
 	Date-Added = {2008-12-06 23:10:11 -0600},
 	Date-Modified = {2010-05-20 16:03:36 -0500},
 	Journal = {Comput. Geom. Theory Appl.},
 	Number = {3},
 	Pages = {295--311},
-	Title = {Homotopic {Fr{\'e}chet} distance between curves or, walking your dog in the woods in polynomial time},
+	Title = {Homotopic {Fréchet} distance between curves or, walking your dog in the woods in polynomial time},
 	Volume = {43},
 	Year = {2010}}
 
 @inproceedings{necklace,
-	Author = {David Bremner and Timothy M. Chan and Erik D. Demaine and Jeff Erickson and Ferran Hurtado and John Iacono and Stefan Langerman and Ileana Streinu and Perouz Taslakian},
+	Author = {Bremner, David and Chan, Timothy M. and Demaine, Erik D. and Erickson, Jeff and Hurtado, Ferran and Iacono, John and Langerman, Stefan and Streinu, Ileana and Taslakian, Perouz},
 	Booktitle = {Proc. 14th Ann. Europ. Symp. Algorithms},
 	Date-Added = {2008-12-06 23:07:25 -0600},
 	Date-Modified = {2008-12-06 23:09:37 -0600},
@@ -415,7 +426,7 @@
 	Year = {2006}}
 
 @inproceedings{carrots,
-	Author = {Helmut Alt and Esther M. Arkin and Herv{\'e} Br{\"o}nnimann and Jeff Erickson and S{\'a}ndor P. Fekete and Christian Knauer and Jonathan Lenchner and Joseph S. B. Mitchell and Kim Whittlesey},
+	Author = {Alt, Helmut and Arkin, Esther M. and Brönnimann, Hervé and Erickson, Jeff and Fekete, Sándor P. and Knauer, Christian and Lenchner, Jonathan and Mitchell, Joseph S. B. and Whittlesey, Kim},
 	Booktitle = {Proc. 22nd Ann. Symp. Comput. Geom.},
 	Date-Added = {2008-12-06 23:06:06 -0600},
 	Date-Modified = {2008-12-06 23:19:57 -0600},
@@ -424,7 +435,7 @@
 	Year = {2006}}
 
 @article{wedgectr,
-	Author = {Jeff Erickson and Ferran Hurtado and Pat Morin},
+	Author = {Erickson, Jeff and Hurtado, Ferran and Morin, Pat},
 	Date-Added = {2008-12-06 23:04:17 -0600},
 	Date-Modified = {2008-12-08 17:31:36 -0600},
 	Journal = {Discrete Math. Theor. Comput. Sci.},
@@ -433,7 +444,7 @@
 	Year = {2009}}
 
 @article{linelast,
-	Author = {Reza Abedi and Robert B. Haber and Shripad Thite and Jeff Erickson},
+	Author = {Abedi, Reza and Haber, Robert B. and Thite, Shripad and Erickson, Jeff},
 	Date-Added = {2008-12-06 22:57:50 -0600},
 	Date-Modified = {2013-07-07 17:55:40 +0000},
 	Journal = {Revue Europ\'eenne de M\'ecanique Num\'erique [European Journal of Computational Mechanics]},
@@ -445,7 +456,7 @@
 	Year = {2006}}
 
 @article{boundary,
-	Author = {David Bremner and Erik D. Demaine and Jeff Erickson and John Iacono and Stefan Langerman and Pat Morin and Godfried Toussaint},
+	Author = {Bremner, David and Demaine, Erik D. and Erickson, Jeff and Iacono, John and Langerman, Stefan and Morin, Pat and Toussaint, Godfried},
 	Date-Added = {2008-12-06 22:56:34 -0600},
 	Date-Modified = {2008-12-06 22:57:28 -0600},
 	Journal = {Discrete Comput. Geom.},
@@ -456,7 +467,7 @@
 	Year = {2005}}
 
 @article{essential,
-	Author = {Jeff Erickson and Pratik Worah},
+	Author = {Erickson, Jeff and Worah, Pratik},
 	Date-Added = {2008-12-06 22:53:44 -0600},
 	Date-Modified = {2011-03-23 01:26:33 -0500},
 	Journal = {Discrete Comput. Geom.},
@@ -468,7 +479,7 @@
 	Bdsk-Url-1 = {http://www.cs.uiuc.edu/~jeffe/pubs/essential.html}}
 
 @article{tight,
-	Author = {Sergio Cabello and Matt DeVos and Jeff Erickson and Bojan Mohar},
+	Author = {Cabello, Sergio and DeVos, Matt and Erickson, Jeff and Mohar, Bojan},
 	Date-Added = {2008-12-06 22:53:30 -0600},
 	Date-Modified = {2010-10-18 16:03:30 -0500},
 	Journal = {ACM Trans. Algorithms},
@@ -480,7 +491,7 @@
 	Bdsk-Url-1 = {http://compgeom.cs.uiuc.edu/~jeffe/pubs/tight.html}}
 
 @article{splitting,
-	Author = {Erin W. Chambers and {\'E}ric {Colin de Verdi{\`e}re} and Jeff Erickson and Francis Lazarus and Kim Whittlesey},
+	Author = {Chambers, Erin W. and {Colin de Verdière}, Éric and Erickson, Jeff and Lazarus, Francis and Whittlesey, Kim},
 	Date-Added = {2008-12-06 22:52:55 -0600},
 	Date-Modified = {2008-12-06 22:53:06 -0600},
 	Journal = {Comput. Geom. Theory Appl.},
@@ -492,7 +503,7 @@
 	Year = {2008}}
 
 @article{octagons,
-	Author = {{\'E}ric {Colin de Verdi{\`e}re} and Jeff Erickson},
+	Author = {{Colin de Verdière}, Éric and Erickson, Jeff},
 	Date-Added = {2008-12-06 22:52:40 -0600},
 	Date-Modified = {2011-03-22 23:28:39 -0500},
 	Journal = {SIAM J. Comput.},
@@ -503,7 +514,7 @@
 	Year = {2010}}
 
 @article{realizing,
-	Author = {Erik D. Demaine and Jeff Erickson and Danny Kri\c{z}anc and Henk Meijer and Pat Morin and Mark Overmars and Sue Whitesides},
+	Author = {Demaine, Erik D. and Erickson, Jeff and Kri\c{z}anc, Danny and Meijer, Henk and Morin, Pat and Overmars, Mark and Whitesides, Sue},
 	Date-Added = {2008-12-06 22:50:55 -0600},
 	Date-Modified = {2008-12-08 16:57:17 -0600},
 	Journal = {J. Discrete Algorithms},
@@ -514,7 +525,7 @@
 
 @phdthesis{thesis,
 	Address = {Berkeley, CA},
-	Author = {Jeff Erickson},
+	Author = {Erickson, Jeff},
 	Date-Modified = {2011-08-05 12:30:16 -0500},
 	Month = {July},
 	School = {Comput. Sci. Div., Univ. of California},
@@ -523,7 +534,7 @@
 	Year = {1996}}
 
 @article{kindex,
-	Author = {Pankaj K. Agarwal and Lars Arge and Jeff Erickson},
+	Author = {Agarwal, Pankaj K. and Arge, Lars and Erickson, Jeff},
 	Date-Modified = {2008-12-06 23:45:09 -0600},
 	Journal = {J. Comput. Syst. Sci.},
 	Pages = {207--243},
@@ -532,7 +543,7 @@
 	Year = 2003}
 
 @article{lincon,
-	Author = {Pankaj K. Agarwal and Lars Arge and Jeff Erickson and Paolo G. Franciosa and Jeffrey S. Vitter},
+	Author = {Agarwal, Pankaj K. and Arge, Lars and Erickson, Jeff and Franciosa, Paolo G. and Vitter, Jeffrey S.},
 	Journal = {J. Comput. Syst. Sci.},
 	Number = 2,
 	Pages = {192--216},
@@ -542,9 +553,9 @@
 
 @incollection{survey,
 	Address = {Providence, RI},
-	Author = {Pankaj K. Agarwal and Jeff Erickson},
+	Author = {Agarwal, Pankaj K. and Erickson, Jeff},
 	Booktitle = {Advances in Discrete and Computational Geometry},
-	Editor = {B. Chazelle and J. E. Goodman and R. Pollack},
+	Editor = {Chazelle, B. and Goodman, J. E. and Pollack, R.},
 	Pages = {1--56},
 	Publisher = {American Mathematical Society},
 	Series = {Contemporary Mathematics},
@@ -553,7 +564,7 @@
 	Year = 1999}
 
 @inproceedings{3dbsp,
-	Author = {Pankaj K. Agarwal and Jeff Erickson and Leonidas J. Guibas},
+	Author = {Agarwal, Pankaj K. and Erickson, Jeff and Guibas, Leonidas J.},
 	Booktitle = {Proc. 9th Ann. ACM-SIAM Symp. Discrete Algorithms},
 	Date-Modified = {2008-12-06 23:43:57 -0600},
 	Pages = {107--116},
@@ -561,7 +572,7 @@
 	Year = 1998}
 
 @article{small,
-	Author = {David Eppstein and Jeff Erickson},
+	Author = {Eppstein, David and Erickson, Jeff},
 	Journal = {Discrete Comput. Geom.},
 	Pages = {321--350},
 	Title = {Iterated nearest neighbors and finding minimal polytopes},
@@ -570,7 +581,7 @@
 
 @techreport{simplex,
 	Address = {Irvine, CA},
-	Author = {David Eppstein and Jeff Erickson},
+	Author = {Eppstein, David and Erickson, Jeff},
 	Institution = {Dept. Inform. Comput. Sci., Univ. California},
 	Number = {92-55},
 	Title = {New algorithms for minimum measure simplices and one-dimensional weighted {Voronoi} diagrams},
@@ -578,13 +589,13 @@
 	Year = 1992}
 
 @misc{compgeom,
-	Author = {Jeff Erickson},
+	Author = {Erickson, Jeff},
 	Title = {Computational Geometry Pages},
 	Url = {http://www.uiuc.edu/~jeffe/compgeom/},
 	Bdsk-Url-1 = {http://www.uiuc.edu/~jeffe/compgeom/}}
 
 @article{linsat,
-	Author = {Jeff Erickson},
+	Author = {Erickson, Jeff},
 	Journal = {Chicago J. Theor. Comput. Sci.},
 	Number = 8,
 	Title = {Lower Bounds for Linear Satisfiability Problems},
@@ -592,7 +603,7 @@
 	Year = 1999}
 
 @article{convex,
-	Author = {Jeff Erickson},
+	Author = {Erickson, Jeff},
 	Journal = {SIAM J. Comput.},
 	Pages = {1198--1214},
 	Title = {New Lower Bounds for Convex Hull Problems in Odd Dimensions},
@@ -600,7 +611,7 @@
 	Year = 1999}
 
 @inproceedings{halfempty,
-	Author = {Jeff Erickson},
+	Author = {Erickson, Jeff},
 	Booktitle = {Proc. 37th Ann. IEEE Symp. Found. Comput. Sci.},
 	Date-Modified = {2008-12-06 23:40:10 -0600},
 	Pages = {472--481},
@@ -608,7 +619,7 @@
 	Year = 1996}
 
 @article{hopcroft,
-	Author = {Jeff Erickson},
+	Author = {Erickson, Jeff},
 	Journal = {Discrete Comput. Geom.},
 	Pages = {389--418},
 	Title = {New Lower Bounds for {Hopcroft's} Problem},
@@ -617,7 +628,7 @@
 	Year = 1996}
 
 @inproceedings{relative,
-	Author = {Jeff Erickson},
+	Author = {Erickson, Jeff},
 	Booktitle = {Proc. 7th Canad. Conf. Comput. Geom.},
 	Pages = {85--90},
 	Title = {On the Relative Complexities of Some Geometric Problems},
@@ -626,19 +637,19 @@
 	Bdsk-Url-1 = {http://www.uiuc.edu/~jeffe/pubs/relative.html}}
 
 @article{plucker,
-	Author = {Jeff Erickson},
+	Author = {Erickson, Jeff},
 	Date-Modified = {2008-12-06 22:53:59 -0600},
 	Journal = {Ray Tracing News},
 	Month = dec,
 	Number = 3,
-	Title = {Pl{\"u}cker coordinates},
+	Title = {Plücker coordinates},
 	Url = {http://www.acm.org/tog/resources/RTNews/html/rtnv10n3.html},
 	Volume = 10,
 	Year = 1997,
 	Bdsk-Url-1 = {http://www.acm.org/tog/resources/RTNews/html/rtnv10n3.html}}
 
 @article{tradeoff,
-	Author = {Jeff Erickson},
+	Author = {Erickson, Jeff},
 	Journal = {SIAM J. Comput.},
 	Number = 6,
 	Pages = {1968--1996},
@@ -647,7 +658,7 @@
 	Year = 2000}
 
 @article{degen,
-	Author = {Jeff Erickson and Raimund Seidel},
+	Author = {Erickson, Jeff and Seidel, Raimund},
 	Journal = {Discrete Comput. Geom.},
 	Note = {Erratum in \emph{Discrete Comput. Geom.} 13(1):41--57, 1997},
 	Pages = {41--57},
@@ -656,7 +667,7 @@
 	Year = 1995}
 
 @inproceedings{kollide,
-	Author = {Jeff Erickson and Leonidas J. Guibas and Jorge Stolfi and Li Zhang},
+	Author = {Erickson, Jeff and Guibas, Leonidas J. and Stolfi, Jorge and Zhang, Li},
 	Booktitle = {Proc. 10th Ann. ACM-SIAM Symp. Discrete Algorithms},
 	Date-Modified = {2008-12-06 23:40:24 -0600},
 	Pages = {327--336},
@@ -664,7 +675,7 @@
 	Year = 1999}
 
 @article{cdsimple,
-	Author = {Julien Basch and Jeff Erickson and Leonidas J. Guibas and John Hershberger and Li Zhang},
+	Author = {Basch, Julien and Erickson, Jeff and Guibas, Leonidas J. and Hershberger, John and Zhang, Li},
 	Date-Modified = {2008-12-06 23:03:39 -0600},
 	Journal = {Comput. Geom. Theory Appl.},
 	Number = {3},
@@ -674,7 +685,7 @@
 	Year = 2004}
 
 @article{cycles,
-	Author = {David Eppstein and Jeff Erickson},
+	Author = {Eppstein, David and Erickson, Jeff},
 	Journal = {Discrete Comput. Geom.},
 	Number = 4,
 	Pages = {569--592},
@@ -683,7 +694,7 @@
 	Year = 1999}
 
 @inproceedings{gridvis,
-	Author = {Jeff Erickson},
+	Author = {Erickson, Jeff},
 	Booktitle = {Proc. 11th Ann. ACM-SIAM Symp. Discrete Algorithms},
 	Date-Modified = {2008-12-06 23:40:29 -0600},
 	Pages = {901--909},
@@ -691,7 +702,7 @@
 	Year = 2000}
 
 @article{flipturn,
-	Author = {Oswin Aichholzer and Carmen Cort{\'e}s and Vida Dujmovi{\'c} and Erik D. Demaine and Jeff Erickson and Henk Meijer and Mark Overmars and Bel{\'e}n Palop and Suneeta Ramaswami and Godfried T. Toussaint},
+	Author = {Aichholzer, Oswin and Cortés, Carmen and Dujmović, Vida and Demaine, Erik D. and Erickson, Jeff and Meijer, Henk and Overmars, Mark and Palop, Belén and Ramaswami, Suneeta and Toussaint, Godfried T.},
 	Eprint = {arXiv:cs.CG/0008010},
 	Journal = {Discrete Comput. Geom.},
 	Pages = {231--253},
@@ -700,7 +711,7 @@
 	Year = {2002}}
 
 @article{reconvex,
-	Author = {Oswin Aichholzer and Erik D. Demaine and Jeff Erickson and Ferran Hurtado and Mark Overmars and Michael A. Soss and Godfried Toussaint},
+	Author = {Aichholzer, Oswin and Demaine, Erik D. and Erickson, Jeff and Hurtado, Ferran and Overmars, Mark and Soss, Michael A. and Toussaint, Godfried},
 	Journal = {Comput. Geom. Theory Appl.},
 	Number = {1--2},
 	Pages = {85--95},
@@ -709,7 +720,7 @@
 	Year = 2001}
 
 @article{spread,
-	Author = {Jeff Erickson},
+	Author = {Erickson, Jeff},
 	Date-Modified = {2008-12-06 23:45:19 -0600},
 	Eprint = {arXiv:cs.CG/0103017},
 	Journal = {Discrete Comput. Geom.},
@@ -720,7 +731,7 @@
 	Year = 2003}
 
 @article{screw,
-	Author = {Jeff Erickson},
+	Author = {Erickson, Jeff},
 	Date-Modified = {2008-12-06 23:42:31 -0600},
 	Eprint = {arXiv:cs.CG/0110030},
 	Journal = {Discrete Comput. Geom.},
@@ -730,10 +741,10 @@
 	Year = 2005}
 
 @incollection{crum,
-	Author = {Jeff Erickson and Scott Kim},
+	Author = {Erickson, Jeff and Kim, Scott},
 	Booktitle = {Discrete Geometry:~In Honor of W. Kuperberg's 60th Birthday},
 	Date-Modified = {2008-12-08 17:02:08 -0600},
-	Editor = {Andr\'as Bezdek},
+	Editor = {Bezdek, Andr\'as},
 	Eprint = {arXiv:math.CO/0106095},
 	Pages = {267--278},
 	Publisher = {Marcel-Dekker},
@@ -742,10 +753,10 @@
 	Year = 2003}
 
 @incollection{vunfold,
-	Author = {Erik D. Demaine and David Eppstein and Jeff Erickson and George W. Hart and Joseph O'Rourke},
+	Author = {Demaine, Erik D. and Eppstein, David and Erickson, Jeff and Hart, George W. and O'Rourke, Joseph},
 	Booktitle = {Discrete Geometry:~In Honor of W. Kuperberg's 60th Birthday},
 	Date-Modified = {2008-12-08 17:01:52 -0600},
-	Editor = {Andr\'as Bezdek},
+	Editor = {Bezdek, Andr\'as},
 	Eprint = {arXiv:cg.CG/0107023},
 	Pages = {215--228},
 	Publisher = {Marcel-Dekker},
@@ -754,7 +765,7 @@
 	Year = 2003}
 
 @article{schema,
-	Author = {Jeff Erickson and Sariel Har-Peled},
+	Author = {Erickson, Jeff and Har-Peled, Sariel},
 	Journal = {Discrete Comput. Geom.},
 	Pages = {37--59},
 	Title = {Optimally cutting a surface into a disk},
@@ -762,7 +773,7 @@
 	Year = 2004}
 
 @article{local,
-	Author = {Jeff Erickson},
+	Author = {Erickson, Jeff},
 	Date-Modified = {2008-12-06 23:45:27 -0600},
 	Journal = {Comput. Geom. Theory Appl.},
 	Number = {1--2},
@@ -772,7 +783,7 @@
 	Year = 2005}
 
 @article{motwork+,
-	Author = {Pankaj K. Agarwal and Leonidas J. Guibas and Herbert Edelsbrunner and Jeff Erickson and Michael Isard and Sariel Har-Peled and John Hershberger and Christian Jensen and Lydia Kavraki and Patrice Koehl and Ming Lin and Dinesh Manocha and Dimitris Metaxas and Brian Mirtich and David Mount and S. Muthukrishnan and Dinesh Pai and Elisha Sacks and Jack Snoeyink and Subhash Suri and Ouri Wolfson},
+	Author = {Agarwal, Pankaj K. and Guibas, Leonidas J. and Edelsbrunner, Herbert and Erickson, Jeff and Isard, Michael and Har-Peled, Sariel and Hershberger, John and Jensen, Christian and Kavraki, Lydia and Koehl, Patrice and Lin, Ming and Manocha, Dinesh and Metaxas, Dimitris and Mirtich, Brian and Mount, David and Muthukrishnan, S. and Pai, Dinesh and Sacks, Elisha and Snoeyink, Jack and Suri, Subhash and Wolfson, Ouri},
 	Journal = {ACM Comput. Surv.},
 	Pages = {550--572},
 	Title = {Algorithmic Issues in Modeling Motion},
@@ -780,7 +791,7 @@
 	Year = 2002}
 
 @article{motwork,
-	Author = {Pankaj K. Agarwal and Leonidas J. Guibas and others},
+	Author = {Agarwal, Pankaj K. and Guibas, Leonidas J. and others},
 	Journal = {ACM Comput. Surv.},
 	Pages = {550--572},
 	Title = {Algorithmic Issues in Modeling Motion},
@@ -788,7 +799,7 @@
 	Year = 2002}
 
 @article{dihedral,
-	Author = {Jeff Erickson and Michael A. Soss and Mark Overmars},
+	Author = {Erickson, Jeff and Soss, Michael A. and Overmars, Mark},
 	Date-Modified = {2008-12-08 16:55:47 -0600},
 	Journal = {Comput. Geom. Theory Appl.},
 	Number = {3},
@@ -798,7 +809,7 @@
 	Year = 2003}
 
 @article{slowpitch,
-	Author = {Jeff Erickson and Damrong Guoy and John M. Sullivan and Alper {\"U}ng{\"o}r},
+	Author = {Erickson, Jeff and Guoy, Damrong and Sullivan, John M. and Üngör, Alper},
 	Date-Modified = {2008-12-06 22:56:15 -0600},
 	Journal = {Eng. Comput.},
 	Number = {4},
@@ -809,7 +820,7 @@
 	Bdsk-Url-1 = {http://www.andrew.cmu.edu/user/sowen/abbstracts/Er876.html}}
 
 @article{capture,
-	Author = {Jeff Erickson and Shripad Thite and Fred Rothganer and Jean Ponce},
+	Author = {Erickson, Jeff and Thite, Shripad and Rothganer, Fred and Ponce, Jean},
 	Date-Modified = {2008-12-06 23:02:12 -0600},
 	Journal = {IEEE Trans. Robotics},
 	Number = {6},
@@ -819,7 +830,7 @@
 	Year = 2007}
 
 @inproceedings{flat2flat,
-	Author = {Greg Aloupis and Erik D. Demaine and Vida Dujmovi\'c and Jeff Erickson and Stefan Langerman and Henk Meijer and Ileana Streinu and Joseph O'Rourke and Mark Overmars and Michael Soss and Godfried Toussaint},
+	Author = {Aloupis, Greg and Demaine, Erik D. and Dujmovi\'c, Vida and Erickson, Jeff and Langerman, Stefan and Meijer, Henk and Streinu, Ileana and O'Rourke, Joseph and Overmars, Mark and Soss, Michael and Toussaint, Godfried},
 	Booktitle = {Proc. 13th Ann. Int. Symp. Algorithms and Computation},
 	Date-Modified = {2008-12-06 23:41:51 -0600},
 	Number = {2518},
@@ -830,7 +841,7 @@
 	Year = {2002}}
 
 @article{cubeflip,
-	Author = {Marshall Bern and David Eppstein and Jeff Erickson},
+	Author = {Bern, Marshall and Eppstein, David and Erickson, Jeff},
 	Date-Modified = {2008-12-06 22:56:10 -0600},
 	Journal = {Eng. Comput.},
 	Pages = {173--187},
@@ -839,7 +850,7 @@
 	Year = 2002}
 
 @inproceedings{conelb,
-	Author = {Erik D. Demaine and Jeff Erickson and Stefan Langerman},
+	Author = {Demaine, Erik D. and Erickson, Jeff and Langerman, Stefan},
 	Booktitle = {Proc. 15th Canadian Conf. Comput. Geom.},
 	Date-Modified = {2008-12-06 22:46:32 -0600},
 	Pages = {159--160},
@@ -847,7 +858,7 @@
 	Year = 2003}
 
 @inproceedings{prophetic,
-	Author = {Pankaj Agarwal and Lars Arge and Jeff Erickson and Hai Yu},
+	Author = {Agarwal, Pankaj and Arge, Lars and Erickson, Jeff and Yu, Hai},
 	Booktitle = {Proc. 12th Ann. European Symp. Algorithms},
 	Date-Modified = {2008-12-06 23:43:07 -0600},
 	Number = {3221},
@@ -858,7 +869,7 @@
 	Year = 2004}
 
 @article{halfslab,
-	Author = {Jeff Erickson and Sariel Har-Peled and David Mount},
+	Author = {Erickson, Jeff and Har-Peled, Sariel and Mount, David},
 	Date-Modified = {2008-12-06 23:45:32 -0600},
 	Journal = {Discrete Comput. Geom.},
 	Number = {4},
@@ -868,7 +879,7 @@
 	Year = 2006}
 
 @article{chordsep,
-	Author = {Erik D. Demaine and Jeff Erickson and Ferran Hurtado and John Iacono and Stefan Langerman and Henk Meijer and Mark Overmars and Sue Whitesides},
+	Author = {Demaine, Erik D. and Erickson, Jeff and Hurtado, Ferran and Iacono, John and Langerman, Stefan and Meijer, Henk and Overmars, Mark and Whitesides, Sue},
 	Date-Modified = {2008-12-06 23:45:23 -0600},
 	Journal = {Int. J. Comput. Geom. Appl.},
 	Number = {4},
@@ -878,7 +889,7 @@
 	Year = 2005}
 
 @inproceedings{refine,
-	Author = {Reza Abedi and Shuo-Heng Chung and Jeff Erickson and Yong Fan and Michael Garland and Damrong Guoy and Robert Haber and John Sullivan and Shripad Thite and Yuan Zhou},
+	Author = {Abedi, Reza and Chung, Shuo-Heng and Erickson, Jeff and Fan, Yong and Garland, Michael and Guoy, Damrong and Haber, Robert and Sullivan, John and Thite, Shripad and Zhou, Yuan},
 	Booktitle = {Proc. 20th Ann. Symp. Comput. Geom.},
 	Date-Modified = {2013-05-05 20:17:44 +0000},
 	Pages = {300--309},
@@ -886,14 +897,14 @@
 	Year = {2004}}
 
 @inproceedings{extlower,
-	Author = {Jeff Erickson},
+	Author = {Erickson, Jeff},
 	Booktitle = {Proc. 16th Ann. ACM-SIAM Symp. Discrete Algorithms},
 	Date-Modified = {2008-12-06 23:43:20 -0600},
 	Title = {Lower bounds for external algebraic decision trees},
 	Year = 2005}
 
 @inproceedings{gohog,
-	Author = {Jeff Erickson and Kim Whittlesey},
+	Author = {Erickson, Jeff and Whittlesey, Kim},
 	Booktitle = {Proc. 16th Ann. ACM-SIAM Symp. Discrete Algorithms},
 	Date-Modified = {2008-12-08 16:59:06 -0600},
 	Pages = {1038--1046},
