--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,24 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-11-27 15:23:59 -0600 
+%% Created for Jeff Erickson at 2015-12-02 09:16:13 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{a-cas-26,
+	Author = {Alexander, James W.},
+	Date-Added = {2015-12-02 15:12:11 +0000},
+	Date-Modified = {2015-12-02 15:13:41 +0000},
+	Journal = {Trans. Amer. Math. Soc.},
+	Keywords = {simplicial approximation theorem},
+	Number = {2},
+	Pages = {301--326},
+	Title = {Combinatorial analysis situs},
+	Volume = {28},
+	Year = {1926}}
 
 @article{bc-anrms-86,
 	Author = {Bender, Edward A. and Canfield, E. Rodney},
