--- a/topology.bib
+++ b/topology.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-12-02 09:16:13 -0600 
+%% Created for Jeff Erickson at 2015-12-02 09:21:36 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -2585,8 +2585,9 @@ By abstracting from the $\Delta\leftrightarrow$Y transformations their relationa
 A main objective of studying $\Delta\leftrightarrow$Y transformations is finding efficient algorithms. Most of the results presented in this work imply efficient algorithms. For some, we explicitly provide the algorithms.},
 	Author = {Gitler, Isidoro},
 	Date-Added = {2014-07-12 15:56:38 +0000},
-	Date-Modified = {2015-08-02 14:07:14 +0000},
-	Note = {Cited in \cite{gs-tdrpg-11}},
+	Date-Modified = {2015-12-02 15:20:26 +0000},
+	Keywords = {Cited in \cite{gs-tdrpg-11}},
+	Read = {1},
 	School = {Department of Combinatorics and Optimization, University of Waterloo},
 	Title = {Delta-wye-delta Transformations: Algorithms and Applications},
 	Year = {1991}}
@@ -9605,15 +9606,14 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 
 @article{s-pr-1916,
 	Author = {Steinitz, Ernst},
-	Comments = {First proof of Steintz's theorem},
+	Comments = {First proof of Steintz's theorem; http://gdz.sub.uni-goettingen.de/dms/load/img/?PPN=PPN360609767&DMDID=dmdlog203},
 	Date-Added = {2011-11-07 12:45:05 +0000},
-	Date-Modified = {2015-07-09 15:00:48 +0000},
+	Date-Modified = {2015-12-02 15:21:30 +0000},
 	Journal = {Enzyklopädie der mathematischen Wissenschaften mit Einschluss ihrer Anwendungen},
 	Number = {12},
 	Pages = {1--139},
 	Read = {1},
 	Title = {Polyeder und {Raumeinteilungen}},
-	Url = {http://gdz.sub.uni-goettingen.de/dms/load/img/?PPN=PPN360609767&DMDID=dmdlog203},
 	Volume = {III.AB},
 	Year = {1916},
 	Bdsk-Url-1 = {http://gdz.sub.uni-goettingen.de/dms/load/img/?PPN=PPN360609767&DMDID=dmdlog203}}
