--- a/topology.bib
+++ b/topology.bib
@@ -53,7 +53,7 @@
 	Number = {1},
 	Pages = {171--215},
 	Read = {1},
-	Title = {Prabolic equations for curves on surfaces: {Part} {II}. {Intersections}, blow-up and generalized solutions},
+	Title = {Parabolic equations for curves on surfaces: {Part} {II}. {Intersections}, blow-up and generalized solutions},
 	Volume = {133},
 	Year = {1991}}
 
