--- a/topology.bib
+++ b/topology.bib
@@ -8,6 +8,15 @@
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+@unpublished{ce-upc-15,
+	Author = {Chang, Hsien-Chih and Erickson, Jeff G.},
+	Comments = {subsumes some results and sketches some others from earlier preprint "Electrical reduction, homotopy moves, and defect"},
+	Month = {December},
+	Note = {Unpublished manuscript},
+	Title = {Untangling Planar Curves},
+	Url = {http://jeffe.cs.illinois.edu/pubs/pdf/tangle.pdf},
+	Year = {2015},
+	Bdsk-Url-1 = {http://jeffe.cs.illinois.edu/pubs/pdf/tangle.pdf}}
 
 @article{a-cas-26,
 	Author = {Alexander, James W.},
