--- a/jeffe.bib
+++ b/jeffe.bib
@@ -10,6 +10,14 @@
 
 @string{jeffe = {Jeff Erickson}}
 
+@inproceedings{tangle,
+	Author = {Chang, Hsien-Chih and Erickson, Jeff G.},
+	Booktitle = {Proc. 32nd International Symposium on Computational Geometry},
+	Pages = {29:1--29:15},
+	Title = {Untangling Planar Curves},
+	Url = {http://jeffe.cs.illinois.edu/pubs/pdf/tangle.pdf},
+	Year = {2016},
+	Bdsk-Url-1 = {http://jeffe.cs.illinois.edu/pubs/pdf/tangle.pdf}}
 
 @misc{defect,
 	Arxiv = {1510.00571},
@@ -18,7 +26,7 @@
 	Date-Modified = {2015-11-27 23:43:23 +0000},
 	Howpublished = {Preprint},
 	Month = {October},
-	Title = {Electrical reduction, homtoopy moves,  and defect},
+	Title = {Electrical reduction, homotopy moves,  and defect},
 	Year = {2015}}
 
 @misc{comptop-notes,
