no middle initial

--- a/jeffe.bib
+++ b/jeffe.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-11-27 17:43:23 -0600 
+%% Created for Jeff Erickson at 2016-07-11 10:12:44 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -10,12 +10,13 @@
 
 @string{jeffe = {Jeff Erickson}}
 
+
 @inproceedings{tangle,
-	Author = {Chang, Hsien-Chih and Erickson, Jeff G.},
+	Author = {Chang, Hsien-Chih and Erickson, Jeff},
 	Booktitle = {Proc. 32nd International Symposium on Computational Geometry},
+	Date-Modified = {2016-07-11 15:12:44 +0000},
 	Pages = {29:1--29:15},
 	Title = {Untangling Planar Curves},
-	Url = {http://jeffe.cs.illinois.edu/pubs/pdf/tangle.pdf},
 	Year = {2016},
 	Bdsk-Url-1 = {http://jeffe.cs.illinois.edu/pubs/pdf/tangle.pdf}}
 
@@ -26,7 +27,7 @@
 	Date-Modified = {2015-11-27 23:43:23 +0000},
 	Howpublished = {Preprint},
 	Month = {October},
-	Title = {Electrical reduction, homotopy moves,  and defect},
+	Title = {Electrical reduction, homotopy moves, and defect},
 	Year = {2015}}
 
 @misc{comptop-notes,
